--- a/css/style.css
+++ b/css/style.css
@@ -61,3 +61,19 @@ body {
       .container ul li:hover span {
         width: 2.5rem;
         opacity: 1; }
+
+@media (max-width: 1024px) {
+  .container {
+    max-width: 40%; } }
+
+@media (max-width: 768px) {
+  .container {
+    max-width: 50%; } }
+
+@media (max-width: 600px) {
+  .container {
+    max-width: 70%; } }
+
+@media (max-width: 480px) {
+  .container {
+    max-width: 90%; } }
