--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,12 @@ body {
   min-height: auto;
   margin: 3rem auto;
   box-shadow: 0 0 3px black; }
+  .container p {
+    color: #a5b9ca;
+    font-size: 0.8rem;
+    padding: 0.5rem; }
+    .container p span {
+      color: #a2a6aa; }
   .container h1 {
     background-color: #0e45eb;
     color: #ffffff;
