--- a/sass/style.scss
+++ b/sass/style.scss
@@ -24,6 +24,14 @@ body{
     min-height: auto;
     margin: 3rem auto;
     box-shadow: 0 0 3px rgba($color: #000000, $alpha: 1.0);
+    p{
+        color: #a5b9ca;
+        font-size: 0.8rem;
+        padding: 0.5rem;
+        span{
+            color: #a2a6aa;
+        }
+    }
     h1{
         background-color: #0e45eb;
         color: #ffffff;
